--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Rohit R Gummi</title>
 
-    <link rel="stylesheet" href="stylesheets/styles-light.css">
+    <link rel="stylesheet" href="stylesheets/styles-home.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
@@ -13,6 +13,13 @@
     <![endif]-->
   </head>
   <body>
+   <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <center><h1>rohit r gummi</h1>
+      <p>second year medical student at the university of missouri school of medicine<br>
+      </p>
+    </div>
+
     <div class="wrapper">
       <header>
         <h1>rohit r gummi</h1>
@@ -36,7 +43,17 @@
 		</a></p>
        </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    <script src="javascripts/scale.fix.js"></script>    
+    <script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+    }
+
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("main").style.marginLeft= "0";
+    }
+    </script>
   </body>
 </html>
