--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="wrapper">
       <header>
-        <h1>rohit r gummi</h1>
+	<h1>rohit r gummi</h1>
 	<p>
 		second year medical student at the university of missouri school of medicine<br>
 		<br><b>Education</b><br>
@@ -51,8 +51,8 @@
     }
 
     function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-        document.getElementById("main").style.marginLeft= "0";
+        document.getElementById("mySidenav").style.width = "500px";
+        document.getElementById("main").style.marginLeft= "500px";
     }
     </script>
   </body>
